<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lytContenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/lblPuntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miPuntuacion"
        />

    <TextView
        android:id="@+id/puntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/lblUsuarioColision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuarioColision"
        />
    <TextView
        android:id="@+id/usuarioCol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        />

    <Button
        android:id="@+id/volver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="volverInicio"
        android:text="@string/volverInicio" />
</LinearLayout>